# kist-drl-g1-cortex

./: .env.example  .gitmodules  README.md  env.sh  requirements.txt
.github/workflows/: ci.yml  pr-meta.yml
config/: cyclonedds.xml
docs/proposals/: CommandStatus.msg
scripts/: run_cortex.sh
src/cortex_action/: package.xml  setup.cfg  setup.py
src/cortex_action/cortex_action/: tts_node.py
src/cortex_bringup/: package.xml  setup.cfg  setup.py
src/cortex_bringup/config/: cortex_params.yaml
src/cortex_bringup/launch/: cortex.launch.py  speech.launch.py
src/cortex_cognition/: package.xml  setup.cfg  setup.py
src/cortex_cognition/config/scenarios/: 00_stop.json5  go_fridge.json5  go_home.json5  go_table.json5  greet.json5  reference.json5  refrigerator_pickup.json5
src/cortex_cognition/cortex_cognition/: orchestrator_node.py
src/cortex_msgs/: CMakeLists.txt  package.xml
src/cortex_msgs/msg/: CommandStatus.msg  SpeakCommand.msg  Subtask.msg  TaskStatus.msg  Verdict.msg
src/cortex_perception/: package.xml  setup.cfg  setup.py
src/cortex_perception/cortex_perception/: stt_node.py  vlm_node.py
src/cortex_reasoning/: package.xml  setup.cfg  setup.py
src/cortex_reasoning/cortex_reasoning/: orchestrator_node.py
src/cortex_speech/: package.xml  setup.cfg  setup.py
src/cortex_speech/cortex_speech/: stt_node.py  tts_node.py
src/cortex_speech/launch/: speech.launch.py
