<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cortex_msgs</name>
  <version>0.0.1</version>
  <description>
    Cortex-internal interfaces for the PC cognitive plane: the active sub-task
    handed to the VLM critic, its verdict, and orchestration status. Shared
    robot/control/audio interfaces live in g1_onboard_msgs (SSOT) — do NOT
    redefine them here.
  </description>
  <maintainer email="park50260@gmail.com">박성용</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
