<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cortex_speech</name>
  <version>0.0.1</version>
  <description>
    Speech I/O for the cortex plane: streaming STT with VAD endpointing
    (mic PCM -> transcript) and streaming TTS with barge-in (text -> speaker).
    Consumes/produces audio over the shared bridge domain via g1_onboard_msgs.
  </description>
  <maintainer email="park50260@gmail.com">박성용</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>g1_onboard_msgs</depend>  <!-- AudioPCM / SpeakerState (once wired) -->

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
